--- a/style.css
+++ b/style.css
@@ -38,8 +38,21 @@ label {
     margin-bottom: 8px;
 }
 
-input[type="range"] {
-    width: 100%;
+.stars {
+    display: flex;
+    cursor: pointer;
+}
+
+.star {
+    font-size: 2em;
+    color: #ccc;
+    transition: color 0.2s;
+}
+
+.star.selected,
+.star:hover,
+.star:hover ~ .star {
+    color: #fda085;
 }
 
 .feedback {
