--- a/style.css
+++ b/style.css
@@ -1,5 +1,7 @@
 body {
-    font-family: 'Arial', sans-serif;
+    font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
+    background: #333;
+    color: #fff;
     margin: 0;
     padding: 0;
     display: flex;
@@ -7,8 +9,6 @@ body {
     align-items: center;
     justify-content: center;
     min-height: 100vh;
-    background: #333; /* Dunkler Hintergrund */
-    color: #fff; /* Helle Schrift */
 }
 
 .container {
@@ -22,8 +22,21 @@ body {
 }
 
 header {
+    position: sticky;
+    top: 0;
+    background: #222; /* Dunkle Farbe, um den Text abzuheben */
+    padding: 10px 20px;
+    z-index: 1000; /* Stellen Sie sicher, dass der Header über anderen Elementen schwebt */
+    width: 100%;
     text-align: center;
     margin-bottom: 20px;
+}
+
+h1 {
+    font-weight: bold;
+    font-size: 1.75em; /* Größere Schrift für die Überschrift */
+    text-align: center;
+    margin: 0; /* Entfernen des Standard-Margins */
 }
 
 section.survey {
